--- a/get-kf-images/002-半自动匹配方式/get-images/整理镜像源过程.md
+++ b/get-kf-images/002-半自动匹配方式/get-images/整理镜像源过程.md
@@ -560,6 +560,10 @@ gcr.io/google-containers/busybox
 gcr.io/ml-pipeline/visualization-server
 gcr.io/ml-pipeline/frontend
 
+009
+
+gcr.io/knative-releases/knative.dev/eventing/cmd/apiserver_receive_adapter@sha256:5b672eedd343bcf9496c2070479f9d8f29231069148bf2aa7991bd5ca5a7562a
+
 015
 
 docker.io/kubeflowkatib/earlystopping-medianstop:v0.14.0
@@ -783,6 +787,7 @@ gcr.io/knative-releases/knative.dev/serving/cmd/queue@sha256:14415b204ea8d056723
 gcr.io/knative-releases/knative.dev/eventing/cmd/controller@sha256:dc0ac2d8f235edb04ec1290721f389d2bc719ab8b6222ee86f17af8d7d2a160f
 gcr.io/knative-releases/knative.dev/eventing/cmd/webhook@sha256:b7faf7d253bd256dbe08f1cac084469128989cf39abbe256ecb4e1d4eb085a31
 gcr.io/knative-releases/knative.dev/eventing/cmd/mtping@sha256:632d9d710d070efed2563f6125a87993e825e8e36562ec3da0366e2a897406c0
+gcr.io/knative-releases/knative.dev/eventing/cmd/apiserver_receive_adapter@sha256:5b672eedd343bcf9496c2070479f9d8f29231069148bf2aa7991bd5ca5a7562a
 
 gcr.io/knative-releases/knative.dev/net-istio/cmd/controller@sha256:f253b82941c2220181cee80d7488fe1cefce9d49ab30bdb54bcb8c76515f7a26
 gcr.io/knative-releases/knative.dev/net-istio/cmd/webhook@sha256:a705c1ea8e9e556f860314fe055082fbe3cde6a924c29291955f98d979f8185e
